--- a/season-spring.html
+++ b/season-spring.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
-</head> 
+</head>
 
 <body data-spy="scroll" data-target="#main-nav" id="home">
   <nav class="navbar navbar-expand-sm bg-green" id="main-nav">
     <div class="container">
       <a href="index.html" class="navbar-brand text-white">ZHI YU</a>
-        <span class="navbar-toggle-icon"></span>
+      <span class="navbar-toggle-icon"></span>
       <div class="collapse navbar-collapse" id="navbarcollapse">
         <ui class="navbar-nav ml-auto text-white">
           <li class="nav-item">
@@ -37,16 +37,16 @@
           </li>
           <li class="nav-item">
             <a href="Blog.html" class="nav-link">Blogs</a>
-            
+
           <li class="nav-item">
             <a href="blog-detail.html" class="nav-link">Blog Detail</a>
 
-            <li class="nav-item">
-              <a href="about-us.html" class="nav-link">About Us</a>
+          <li class="nav-item">
+            <a href="about-us.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact Us</a>
-        </li>
+          </li>
         </ui>
       </div>
     </div>
@@ -55,159 +55,181 @@
     <div class="row pt-5 pb-5 text-dark">
       <div class="col-md-8">
         <h1>Produce in-Season Spring </h1>
-        <p>f you eat many fruits and veggies, you’re probably familiar with the even flow of produce prices and quality. That’s why buying produce in season is cost-effective and efficient. 
-            Naturally, produce is at its finest when it’s fresh but it’s even better when it’s in season. With spring on the way, let’s look at what produce is coming into season in spring 2021.</p>
-          <img
+        <p>f you eat many fruits and veggies, you’re probably familiar with the even flow of produce prices and quality.
+          That’s why buying produce in season is cost-effective and efficient.
+          Naturally, produce is at its finest when it’s fresh but it’s even better when it’s in season. With spring on
+          the way, let’s look at what produce is coming into season in spring 2021.</p>
+        <img
           src="https://plus.unsplash.com/premium_photo-1663854478288-7a5427dc9637?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-          alt="healthy.meal-3" class="w-75 img-fluid mb-3 rounded-circle shadow p-3 mb-5"> 
-          <div class="row" id="#purple">
-            <div class="col-md- pt-5 ">
-              <h3>March</h3>
-              </div>
-            <div class="col-md- ">
-              <p>Spring starts in March, which means that’s when the first round of fresh in-season fruits and veggies begin hitting grocery store shelves. 
-                What are some of those fruits and veggies? Artichokes, broccoli, Brussels sprouts, cauliflower, lettuce, mushrooms, and radishes. 
-                The veggies alone make for one great in-season grilled vegetable medley. Try tossing some artichokes, broccoli, brussels sprouts, cauliflower, and mushrooms in olive oil, salt, pepper, and garlic powder. 
-                Then pop them in the oven at 400 degrees until they’re cooked to your liking. You can also throw together a great side salad with fresh lettuce and a little bit of chopped-up radish. Check out more produce in season by reading the list below.
-
-                Artichokes
-                Broccoli,
-                Brussels sprouts,
-                Cauliflower
-                Leeks
-                Lettuce
-                Mushrooms
-                Parsnips
-                Pineapples
-                Radishes
-                Rutabagas
-                Turnips</p>
-                <img
-                src="https://images.unsplash.com/photo-1546069901-d5bfd2cbfb1f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
-                alt="Healthy meal"> 
-                <h1>APRIL</h1>
-                <P>On to April. April is the first full month of springtime, and it brings even more fresh produce with it. 
-                    As the season goes on, the produce on the list above keeps getting fresher and fresher while other fruits and vegetables join the party. 
-                    April marks the growing season for asparagus, rhubarb, spring peas, and more. Grilled asparagus goes great with baked chicken, steak, and salmon. 
-                    Try tossing some asparagus in olive oil, salt, and pepper and then throwing them on the grill! Maybe bake some spring peas while you’re at it? Or even whip up a nice rhubarb pie! Read the list below to find out what else is in season.
-
-                    Avocado
-                    Asparagus
-                    Rhubarb
-                    Spring peas
-                    Beets
-                    Cabbage
-                    Sweet potato</P>
-              </div>
-              <img
-                src="https://images.unsplash.com/photo-1606756790138-261d2b21cd75?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-                class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
-                alt="Healthy meal">
-                <H1>MAY</H1> 
-                <p>May is the last full month of spring, which means we see even more fresh fruits and veggies hit the grocery store shelves. 
-                    May sees more fruits come into season, with apricots, cherries, mangoes, and strawberries making an appearance. 
-                    Enjoy an excellent strawberry parfait, cook up a nice apricot cobbler, eat a fresh mango for lunch, or toss a fresh, plump cherry on top of your ice cream sundae, if you want to be a little extra. 
-                    What else comes into season? Read the list below
-
-                    Apricots
-                    Cherries
-                    Mangoes
-                    Okra
-                    Strawberries
-                    Swiss chard
-                    Zucchini</p>
-                    <img
-                    src="https://images.unsplash.com/photo-1559466273-d95e72debaf8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NXw4NjcwNjIzfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                    class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
-                    alt="Healthy meal">
-            </div>  
+          alt="healthy.meal-3" class="w-75 img-fluid mb-3 rounded-circle shadow p-3 mb-5">
+        <div class="row" id="#purple">
+          <div class="col-md- pt-5 ">
+            <h3>March</h3>
           </div>
-          <div class="col-md-4 pl-5">
-            <h2>Recent Posts</h2>
-            <ul class="list-group">
-              <a href="intermittent-fasting.html" class="nav-link list-group-item bg-primary-1 text-white">What is Intermittent fasting?</a>
-              <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-primary-1 text-white"> Mediterranean Diet</a>
-              <a href="brain-health.html" class="nav-link list-group-item bg-primary-1 text-white">Foods that are Great for your Brain Health</a>
-              <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help Inflammation in the Body</a>
-              <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring 2021!</a>
-            </ul>
-    
-          </div>        
-      </div>            
-    </div>              
-  </div>  
- </div>  
-    <!-- FOOTER -->
-    <footer id="main-footer" class="bg-gradient">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4"></div>
-                <div class="text-center py-4 col-md-4">
+          <div class="col-md- ">
+            <p>Spring starts in March, which means that’s when the first round of fresh in-season fruits and veggies
+              begin hitting grocery store shelves.
+              What are some of those fruits and veggies? Artichokes, broccoli, Brussels sprouts, cauliflower, lettuce,
+              mushrooms, and radishes.
+              The veggies alone make for one great in-season grilled vegetable medley. Try tossing some artichokes,
+              broccoli, brussels sprouts, cauliflower, and mushrooms in olive oil, salt, pepper, and garlic powder.
+              Then pop them in the oven at 400 degrees until they’re cooked to your liking. You can also throw together
+              a great side salad with fresh lettuce and a little bit of chopped-up radish. Check out more produce in
+              season by reading the list below.
 
-                    <h3> ZHI YU HEALTH CARE</h3>
-                    <P>Copyright &copy; <span id="year"></span></P>
-                    <button class="btn" data-toggle="modal" data-target="#contact_modal">Contact us</button>
-                </div>
-                <div class="col-md-4"></div>
+              Artichokes
+              Broccoli,
+              Brussels sprouts,
+              Cauliflower
+              Leeks
+              Lettuce
+              Mushrooms
+              Parsnips
+              Pineapples
+              Radishes
+              Rutabagas
+              Turnips</p>
+            <img
+              src="https://images.unsplash.com/photo-1546069901-d5bfd2cbfb1f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+              class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
+            <h1>APRIL</h1>
+            <P>On to April. April is the first full month of springtime, and it brings even more fresh produce with it.
+              As the season goes on, the produce on the list above keeps getting fresher and fresher while other fruits
+              and vegetables join the party.
+              April marks the growing season for asparagus, rhubarb, spring peas, and more. Grilled asparagus goes great
+              with baked chicken, steak, and salmon.
+              Try tossing some asparagus in olive oil, salt, and pepper and then throwing them on the grill! Maybe bake
+              some spring peas while you’re at it? Or even whip up a nice rhubarb pie! Read the list below to find out
+              what else is in season.
 
-            </div>
+              Avocado
+              Asparagus
+              Rhubarb
+              Spring peas
+              Beets
+              Cabbage
+              Sweet potato</P>
+          </div>
+          <img
+            src="https://images.unsplash.com/photo-1606756790138-261d2b21cd75?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+            class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
+          <H1>MAY</H1>
+          <p>May is the last full month of spring, which means we see even more fresh fruits and veggies hit the grocery
+            store shelves.
+            May sees more fruits come into season, with apricots, cherries, mangoes, and strawberries making an
+            appearance.
+            Enjoy an excellent strawberry parfait, cook up a nice apricot cobbler, eat a fresh mango for lunch, or toss
+            a fresh, plump cherry on top of your ice cream sundae, if you want to be a little extra.
+            What else comes into season? Read the list below
+
+            Apricots
+            Cherries
+            Mangoes
+            Okra
+            Strawberries
+            Swiss chard
+            Zucchini</p>
+          <img
+            src="https://images.unsplash.com/photo-1559466273-d95e72debaf8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NXw4NjcwNjIzfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+            class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
         </div>
-    </footer>
+      </div>
+      <div class="col-md-4 pl-5">
+        <h2>Recent Posts</h2>
+        <ul class="list-group">
+          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-primary-1 text-white">What is
+            Intermittent fasting?</a>
+          <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-primary-1 text-white"> Mediterranean
+            Diet</a>
+          <a href="brain-health.html" class="nav-link list-group-item bg-primary-1 text-white">Foods that are Great for
+            your Brain Health</a>
+          <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help
+            Inflammation in the Body</a>
+          <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring
+            2021!</a>
+        </ul>
 
-    <!-- CONTACT MODAL -->
-    <div class="modal fade text-light"id="contact_modal">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header bg-green">
-            <h5 class="modal-title">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body bg-green">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="name">Name</label>
-                  <input type="text" class="form-control">
-                </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  <!-- FOOTER -->
+  <footer id="main-footer" class="bg-gradient">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="text-center py-4 col-md-4">
+
+          <h3> ZHI YU HEALTH CARE</h3>
+          <P>Copyright &copy; <span id="year"></span></P>
+          <button class="btn" data-toggle="modal" data-target="#contact_modal">Contact us</button>
+        </div>
+        <div class="col-md-4"></div>
+
+      </div>
+    </div>
+  </footer>
+
+  <!-- CONTACT MODAL -->
+  <div class="modal fade text-light" id="contact_modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-green">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body bg-green">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control">
               </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email" class="form-control">
-                </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control">
               </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label for="message">Message</label>
-                  <textarea class="form-control"></textarea>
-                </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control"></textarea>
               </div>
             </div>
           </div>
-          <div class="modal-footer bg-green">
-            <button type="button" class="btn btn">Save changes</button>
-            <button type="button" class="btn btn" data-dismiss="modal">Close</button>
-          </div>
+        </div>
+        <div class="modal-footer bg-green">
+          <button type="button" class="btn btn">Save changes</button>
+          <button type="button" class="btn btn" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
-  
-  
-  
-  
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-      // Get the current year for the copyright
-      $('#year').text(new Date().getfullyear());
-  
-      // init Scrollspy
-      $('body').scrollspy({ target: 'main-nav'});
+  </div>
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script>
+    // Get the current year for the copyright
+    $('#year').text(new Date().getfullyear());
+
+    // init Scrollspy
+    $('body').scrollspy({ target: 'main-nav' });
   </script>
-  </body>
-  
-  </html>
+</body>
+
+</html>
