--- a/season-spring.html
+++ b/season-spring.html
@@ -109,29 +109,31 @@
               Beets
               Cabbage
               Sweet potato</P>
-          </div>
-          <img
-            src="https://images.unsplash.com/photo-1606756790138-261d2b21cd75?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-            class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
-          <H1>MAY</H1>
-          <p>May is the last full month of spring, which means we see even more fresh fruits and veggies hit the grocery
-            store shelves.
-            May sees more fruits come into season, with apricots, cherries, mangoes, and strawberries making an
-            appearance.
-            Enjoy an excellent strawberry parfait, cook up a nice apricot cobbler, eat a fresh mango for lunch, or toss
-            a fresh, plump cherry on top of your ice cream sundae, if you want to be a little extra.
-            What else comes into season? Read the list below
+            <img
+              src="https://images.unsplash.com/photo-1606756790138-261d2b21cd75?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
+            <H1>MAY</H1>
+            <p>May is the last full month of spring, which means we see even more fresh fruits and veggies hit the
+              grocery
+              store shelves.
+              May sees more fruits come into season, with apricots, cherries, mangoes, and strawberries making an
+              appearance.
+              Enjoy an excellent strawberry parfait, cook up a nice apricot cobbler, eat a fresh mango for lunch, or
+              toss
+              a fresh, plump cherry on top of your ice cream sundae, if you want to be a little extra.
+              What else comes into season? Read the list below
 
-            Apricots
-            Cherries
-            Mangoes
-            Okra
-            Strawberries
-            Swiss chard
-            Zucchini</p>
-          <img
-            src="https://images.unsplash.com/photo-1559466273-d95e72debaf8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NXw4NjcwNjIzfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-            class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
+              Apricots
+              Cherries
+              Mangoes
+              Okra
+              Strawberries
+              Swiss chard
+              Zucchini</p>
+            <img
+              src="https://images.unsplash.com/photo-1559466273-d95e72debaf8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NXw4NjcwNjIzfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+              class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
+          </div>
         </div>
       </div>
       <div class="col-md-4 pl-5">
