--- a/Blog.html
+++ b/Blog.html
@@ -66,7 +66,10 @@
             </div>
 
             <div class="col-md-6">
-                <h1>ALKALLINE RICH FOODS</h1>
+              <a href="alkalline.html">
+                 <h1>ALKALLINE RICH FOODS</h1>
+              </a>
+               
                 <p>This may not be one you’re familiar with. Alkaline means pH level over 7. 
                   By now, you’ve probably noticed that acidy is a pretty big deal when it comes to gut health. 
                   It’s the same premise as apple cider vinegar. The stuff helps the gut maintain its pH level. 
