--- a/alkalline.html
+++ b/alkalline.html
@@ -39,9 +39,6 @@
             <a href="Blog.html" class="nav-link">Blogs</a>
           </li>
           <li class="nav-item">
-              <a href="blog-detail.html" class="nav-link">Blog Detail</a>
-          </li>
-          <li class="nav-item">
             <a href="about-us.html" class="nav-link">About Us</a>
         </li>
         <li class="nav-item">
@@ -54,7 +51,7 @@
   <div class="container">
     <div class="row pt-5 pb-5 text-dark">
       <div class="col-md-8">
-        <h1>BLOG</h1>
+        <h1>ALKALLINE</h1>
         <p>You are what you eat. We’ve all heard it before. We all know that what we eat affects our bodies. The foods we consume have nutrients in them and eating the right ones helps the body function at its best. 
           But have you ever thought about how what you eat affects your gut? Stomach health is the real deal. Your gut’s health contributes to your metabolism, your ability to take in nutrients, and well, your ability to eat. 
           Bloating, indigestion, heartburn, and nausea are absolutely horrible. When your gut’s not having a good time you can’t eat your favorite meals. 
