--- a/Blog.html
+++ b/Blog.html
@@ -76,7 +76,9 @@
                   Tons of veggies are full of alkaline. Yet another reason why you should eat your vegetables! Leafy greens, broccoli, fresh fruits, and ginger are rich with alkaline and all its glory. 
                   These foods can help you fend against acid reflux and heartburn. Nobody whats to deal with those acid issues. So eat your fresh fruits and veggies.  </p>
 
-                <h1>TAKE IT EASY ON THE FRIED STUFF</h1>
+                <a href="about.health-html">
+                   <h1>TAKE IT EASY ON THE FRIED STUFF</h1></a>
+                  
                 <P>Last but not least, the obvious one. Fried foods. They’re full of fat and grease. Does fried food taste great? It sure does. 
                   But does your body actually need it? No, in fact, it hates it.  Fatty fried foods prevent the lower esophageal sphincter from fully tightening, which leads to dreadful heartburn and acid reflux. 
                   If you have acid issues, avoid fried stuff entirely. Go for grilled, not fried or else your stomach will make you pay for it. </P>
